Fix alignment and spacing of buttons

--- a/styl/forms.styl
+++ b/styl/forms.styl
@@ -22,6 +22,8 @@
 
     // button
     .button
+        vertical-align middle
+        display inline-block
         text-decoration none
         padding .75rem 1rem
         border-radius 1px
